# backend

./: .env.sample  .gitignore  Cargo.toml  README.md  flake.nix  openapi.json  openapi.yaml
.github/workflows/: checks.yaml  docker.yaml
.sqlx/: query-006c265b45d81f8127fae707d84f386ba5b6bd27e8de0caad169fca407387b1e.json  query-00ec187a0cbd7854e1f4be8a985fc1ba0dfa30835f4233c541e133cdfc24bfe1.json  query-07cd0c2a5792d795af632e4f0b27bee05415c3f33a0a2112d88b9041d48c08bf.json  query-09e5b1cc0ddf189d1a365a8be5015e80af635e3139a930609083ad2825332917.json  query-09e67488efa84f5fca482221bbf76c06a9d90f129bcff6b6a5e7ea8eb5becba5.json  query-09f0d6f66f08d8b518f812e31c057a48485d88e25a3ff4560a3beb51dc0e0b25.json  query-0e2006169d0ea9e1ef74cdaf2e2f86fdfd86c9d8ba08b0a6f9ec15a0fea0925d.json  query-0f44035ce1745cbb6e38fb39a18b4cc0de257bd8801d78aaeb7cd77ac889d1cb.json  query-11af240a47cf54b4fd465c4d9ab50fb925215a5a9c6c35d41cb27ecc1b0d259f.json  query-1433635b1c9fed142934d5a818e35ac11a02dc11c08d551a94326e271594e4b3.json  query-16246981947b3be730999aafb3c4d4a6e028ba6b2c1c3989fa8c893187b1bc91.json  query-1856c1940232f2a0cfc5f6db7c9d6dccddb7dbc519b2e1b4023b325eb9569c13.json  query-1efc34ede1bdfe77de47bbe9faba2d6bacc9cf38c07f188fc2ba3179f12efe4d.json  query-2214d5efefccb68e9177c6654e7f2ca2c3a13824e666465d6cce31c418f4e89d.json  query-22f0aeac95a30de679b915c87713cecb5c4794f7d34b32c24b1ed0adec650942.json  query-25995d12ebaa05030b15b7d91bad886aa4615aa2be0a563f30974ae578255892.json  query-275aa6d75c8fcd0c3fd9498a0963ca20e49c8242a57058030556026f19297cab.json  query-2c89c1ea3ffb43db5a51c8fdee11ca35f5e14c9cb505fe16b7b07938b2198bcc.json  query-330e343fb08989f11d511ff9e24a53d4a24beed28d0b384b76fb48033dc581a3.json  query-38c548b894eda8698d4d7329f884b1d6fb2d2e352bacbdcde08a353c1737e1d2.json  query-3979f6e94264be91fb56a711eaaf867748b8ebafda292517b1147614b34875b5.json  query-3ac5c08644fee9f70a9d08bd3f2c552d450d66f2e94b4a0737c7a12e26de6674.json  query-3fe021c028a457ff6c33564a32a868900ab259bc27693d0dbabd940920773c72.json  query-42b571b8d084aa25ef356c63416f600e78235d759f80742cd59ea1c1336367f4.json  query-436251a224236831b6d5c80760cd30471ae30aed4d0b1a21f006742f4f3c4ddc.json  query-4496e25ef577b8cd53a2ef1b9bdb59eda8c774ee6f3f11c14b8b65a23c363edb.json  query-44c7c7eaca8bc85a44934b8a2feb57457115cb7e076c2094f7d2da80a0afc149.json  query-47ae93d028026c3412fe151bf8d5dbdc99dd429deb103f4c8119470e503f7e0a.json  query-4f658126b7c76d6d548e3564178eee2f1ad4bd9396406ca90f426d4140397fbf.json  query-54f74c497ee1698bc14d55abc88a8da0efd656b16a34862241e007df1dc2956d.json  query-5904fa903e0cfbe2b24097942d64ee80aed502b687fddb7024a4ee0821e47189.json  query-632ecf7a99254fe93b31747ee771ce134098e7cf3143943b4e42186787800b0b.json  query-63c3360eb5c124665ba38f648c4f927942fba48024b7f89742387162ff2ba6d8.json  query-67a036c2821c7dcd4428a173d085f61a3f8a9f28cb9b5e1be8b462e8097055ec.json  query-72f10abde25a6477e89a3cf644be950c852b83aa7fd34d6d46f0cefbe45dbea8.json  query-7701e0853d93e6ae5543772466a033c3819f585ed36f2ea555ad0b3452b4a7eb.json  query-7abb5b067260865a3944fd658e229016e945776df2699e454e2f7c11a33f53e6.json  query-894c67916b9a9ac005df0fc0989cf6344f2f53595d51b09d2df9d56c70f6f3f8.json  query-8b073060da5225369e9b2870f398f6cc36c875e90488020a1cf0ade710d658cf.json  query-8c162b1ab72a508562aa0a299cd38ac90e6e1b94fd2cd9ea3dd3391065ccdcdc.json  (+48 more)
k8s/: README.md  api.yaml  config.yaml  kustomization.yaml  postgres.yaml  secret.yaml  service-account.yaml
macros/: Cargo.toml
macros/src/: lib.rs
migrations/: 1_setup.sql
src/: config.rs  constants.rs  db.rs  error.rs  feed.rs  gen_openapi.rs  lib.rs  main.rs  query.rs  schema.rs  smtp.rs
src/auth/: jwt.rs  mod.rs  oauth.rs  password.rs
src/auth/oauth/: client.rs  jwt.rs  mod.rs
src/auth/user/: claims.rs  extractor.rs  mod.rs  user.rs
src/feed/: discover.rs  json.rs  mod.rs  parse.rs
src/feed/daemon/: apply.rs  constants.rs  create.rs  fetch.rs  http.rs  mod.rs  query.rs  update.rs
src/feed/parsed_feed/: feed.rs  feed_item.rs
src/feed/parser/: feed.rs  feed_item.rs  mod.rs  utils.rs
src/feed_parsers/: mod.rs  rss_parser.rs
src/html/: mod.rs
src/http/: auth.rs  common.rs  error.rs  mod.rs
src/http/feed/: create.rs  discover.rs  feed.rs  get.rs  list.rs  mod.rs
src/http/index/: create.rs  delete.rs  get.rs  index.rs  list.rs  mod.rs  update.rs
src/http/items/: get.rs  mod.rs
src/http/lists/: create.rs  delete.rs  get.rs  list.rs  mod.rs  update.rs
src/http/lists/item/: create.rs  delete.rs  get.rs  mod.rs
src/http/search/: mod.rs
src/http/tags/: create.rs  delete.rs  list.rs  mod.rs  update.rs
src/http/user/: mod.rs  oauth.rs
src/http/user/email/: login.rs  mod.rs  password_reset.rs  register.rs  reset_password.rs  send_password_reset_code.rs  verify.rs
src/http/user/history/: delete.rs  get.rs  mod.rs  update.rs
src/http/user/oauth/: authorize.rs  callback.rs  mod.rs  providers.rs
src/items/: mod.rs
src/scraper/: extract.rs  flaresolverr.rs  mod.rs
src/search/: mod.rs
src/sql/: feed.rs  history.rs  index.rs  list.rs  mod.rs  tags.rs  user.rs
src/tests/: context.rs  dates.rs  mod.rs  sql.rs
src/user/: mod.rs
src/website/: website.rs
tests/feeds/: hacker-news-rss.xml
