[package]
name = "bind-backend"
version = "0.1.0"
edition = "2021"

[features]
default = []
flaresolverr = []

[dependencies]
serde = "1.0.217"
serde_json = "1.0.138"
tokio = { version = "1.43.0", features = [
  "macros",
  "rt-multi-thread",
  "signal",
] }

# internal macros
bind-macros = { path = "./macros" }

# logging
tracing = "0.1.41"
tracing-subscriber = { version = "0.3.19", features = ["env-filter"] }

# configuration
config = { version = "0.15.8", features = ["toml"] }
clap = { version = "4.5.27", features = ["derive", "env"] }
dotenv = "0.15.0"

# http client
rustls = "0.23.21"
reqwest = { version = "0.12.9", default-features = false, features = [
  "json",
  "rustls-tls",
  "http2",
  "macos-system-configuration",
  "charset",
  "gzip",
  "brotli",
  "zstd",
] }

# http server
axum = { version = "0.8.1", features = ["macros"] }
axum-macros = "0.5.0"
axum-extra = { version = "0.10.0", features = [
  "typed-header",
  "query",
  "tracing",
] }
tower-http = { version = "0.6.2", features = ["trace"] }
http-body-util = "0.1.2"
validator = { version = "0.20.0", features = ["derive"] }

# rss parsing
rss = "2.0.11"
atom_syndication = "0.12.6"
scraper = "0.23.1"

# database
ormx = {version = "0.11.0", features = ["postgres"]}
sqlx = { version = "0.8.3", features = [
  "runtime-tokio-rustls",
  "any",
  "postgres",
  "chrono",
] }

# errors
anyhow = "1.0.95"
thiserror = "2.0.11"

# authentication
oauth2 = { version = "5.0.0", features = ["timing-resistant-secret-traits"] }
jsonwebtoken = "9.3.1"

chrono = { version = "0.4.39", features = ["serde"] }
nom = "8.0.0"
rand = "0.9.0"
fake = "4.0.0"

readability-rs = "0.5.0"
argon2 = { version = "0.5.3", features = ["std"] }
lettre = { version = "0.11.12", default-features = false, features = ["builder", "hostname", "pool", "smtp-transport", "tokio1", "tokio1-rustls-tls"] }

[dev-dependencies]
pgtemp = "0.5.0"
tower = { version = "0.5.2", features = ["util"] }
mockito = "1.6.1"
cargo-husky = { version = "1", default-features = false }
axum-macros = "0.5.0"
